Ajout de styles responsive dans style.css

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 h1, h2 {
-    color: #333;
+    color:blueviolet;
 }
 
 img {
@@ -55,3 +55,19 @@ img {
     color: #fff;
     text-align: center;
   }
+
+  /* MEDIA QUERIES */
+
+@media screen and (max-width: 768px) {
+    /* Ajustements pour les tablettes */
+    #galerie {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+}
+
+@media screen and (max-width: 480px) {
+    /* Ajustements pour les mobiles */
+    #galerie {
+        grid-template-columns: 1fr;
+    }
+}
